<resources>
    <string name="app_name">Group managment</string>
    <string name="action_search">Search</string>
    <string name="demo_str">Start managing your own group,\n and add your Friends!</string>
    <string name="add_friend">Add friend</string>
    <string name="name_hint">Friend’s name</string>
    <string name="email_hint">Friend’s Email</string>
    <string name="hint_phone">Friend’s phone number</string>
    <string name="add">Add</string>
    <string name="friend_details">Friend Details</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
