<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".activities.AddFriendActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_friend"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_high_five"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_user"
        android:drawableStart="@drawable/ic_user"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_smartphone"
        android:drawableStart="@drawable/ic_smartphone"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@color/colorAccent"/>
</LinearLayout>